<resources>
    <string name="app_name">Trace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Trace</string>
    <string name="nav_header_subtitle">See your channels and chats below.</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Default channel information -->
    <string name="default_channel_name">General</string>
    <string name="default_channel_description">General channel.</string>
    <string name="welcome_message">Welcome to your first channel!</string>

    <!-- For AppBar menu actions -->
    <string name="menu_activity_channel_title">#channel</string>
    <string name="action_directory">Members</string>
    <string name="action_settings">Settings</string>
    <string name="action_snooze">Snooze</string>
    <string name="action_add_people">Add People</string>
    <string name="action_create_channel">Create Channel</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_logout">Logout</string>

    <!-- Message text input -->
    <string name="chat_message_hint">Message…</string>
    <string name="send">Send</string>

    <!-- Message placeholders -->
    <string name="username">Username</string>
    <string name="timestamp">Timestamp</string>
    <string name="message">Message</string>

    <!-- User profile -->
    <string name="activity_user_profile_text_view_name">Username</string>
    <string name="activity_user_profile_button_send">Send Direct Message</string>

    <!-- Members -->
    <string name="activity_channel_members_title">Members</string>
    <string name="menu_activity_member_add">Add member</string>

    <!-- Add user -->
    <string name="activity_add_people_title">Add people</string>
    <string name="activity_add_people_username_description">Enter the username you want to add to the channel.</string>
    <string name="activity_add_people_username_hint">Email…</string>
    <string name="activity_add_people_add_to_list">Add to list</string>
    <string name="activity_add_people_add_to_channel">Add to channel</string>
    <string name="activity_add_people_button">Add to channel</string>

    <!-- Create channel -->
    <string name="activity_create_channel_title">Create channel</string>
    <string name="create_channel_button">Create channel</string>
    <string name="activity_create_channel_description">Add a name and a description for the channel.</string>
    <string name="activity_create_channel_placeholder_name">Name…</string>
    <string name="activity_create_channel_placeholder_description">Description…</string>


</resources>
