<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAddPeople">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/activity_create_channel_title" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_create_channel_padding"
        android:paddingRight="@dimen/activity_create_channel_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ActivityAddPeople">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_channel_member_vertical_margin"
            android:text="@string/activity_create_channel_description" />

        <EditText
            android:id="@+id/add_channel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_create_channel_placeholder_name" />

        <EditText
            android:id="@+id/add_channel_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_create_channel_placeholder_description" />

        <Button
            android:id="@+id/activity_add_people_add_to_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_create_channel_input_margin"
            android:onClick="createChannel"
            android:text="@string/create_channel_button" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>